--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
   },
   "homepage": "https://github.com/niokasgami/Rpg-Maker-MZ-Typescript#readme",
   "dependencies": {
-    "pixi.js": "^5.3.0",
-    "typescript": "^3.9.7"
+    "@types/pako": "^1.0.1",
+    "pixi.js": "^5.3.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
     "@wessberg/rollup-plugin-ts": "^1.3.1",
+    "eslint": "^7.6.0",
+    "localforage": "^1.9.0",
     "rollup": "^2.23.0",
     "rollup-plugin-banner": "^0.2.1",
-    "rollup-plugin-dts": "^1.4.9"
+    "rollup-plugin-dts": "^1.4.9",
+    "typedoc": "^0.17.8",
+    "typescript": "^3.9.7"
   }
 }
