Stricter typings on managers

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rpg-maker-mz-typescript",
-  "version": "1.0.0",
-  "description": "Type definitions for RPG Maker MZ core script",
+  "name": "@masked-rpgmaker/rpg-maker-mz-typescript",
+  "version": "0.1.0",
+  "description": "Type definitions for the RPG Maker MZ core script",
   "main": "index.js",
   "files": [
     "lib"
